Capitulo clasificador, se añade captions

--- a/Plantilla TFM.tex
+++ b/Plantilla TFM.tex
@@ -25,6 +25,8 @@
 \usepackage{listings}
 \usepackage{color}
 \usepackage{setspace}
+\usepackage{caption}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% SCRIPT DE TODO'S O TAREAS PENDIENTES CON BOCADILLOS.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -215,6 +217,7 @@ Finalmente, se identifican algunos problemas y líneas de trabajo futuras.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{capitulos/Introduccion}
 \input{capitulos/EstadoArte}
+\input{capitulos/Herramientas_utilizadas}
 \input{capitulos/Sistema_Metodo_Caso_de_Estudio}
 \input{capitulos/Evaluacion}
 \input{capitulos/Discusion}
