Se añade capítulo del sistema

--- a/capitulos/Evaluacion.tex
+++ b/capitulos/Evaluacion.tex
@@ -6,6 +6,7 @@
 \fancyhead[RE]{\textsc{CAPÍTULO} \thechapter. Evaluación}
 \label{ch:Evaluacion}
 
+\todo{Explicar proceso de evaluación con digramas: ShuffleSplit + Crossvalidation}
 \noindent Este capítulo describe la metodología utilizada para evaluar el sistema/método o caso de estudio propuesto, a la vez que presenta los resultados obtenidos en la evaluación de las diferentes tareas y sobre colecciones de evaluación de distintos dominios. Algunos ejemplos de secciones pueden ser estos:
 
 \section{Metodología de evaluación}
