Se añade capitulo 4.1.1. Texto

--- a/capitulos/EstadoArte.tex
+++ b/capitulos/EstadoArte.tex
@@ -100,7 +100,7 @@ Esta tabla está formada por verdaderos positivos, verdaderos negativos, falsos p
 	\item Precisión: representa la fracción de asignaciones correctas frente al total de asignaciones positivas realizadas para esa clase.
 	\[Precision=\frac{TP}{TP+FP}\]
 	\item Cobertura: representa la fracción de asignaciones positivas respecto al conjunto real de elementos pertenecientes a la clase.
-	\[Precision=\frac{TP}{TP+FN}\]
+	\[Cobertura=\frac{TP}{TP+FN}\]
 	\item Medida-F: combina las dos medidas anteriores.
 	\[Medida-F=\frac{2xprecisionxcobertura}{precision+cobertura}\]
 \end{itemize}
